@startuml

'left to right direction

NetworkApp o-r-  "1" NewsFeed
NewsFeed "1" o-r- "0..n" Post

class NetworkApp {
+ {static} void main(String[])
}

class NewsFeed {
- ArrayList<Post> posts
+ void addPost(Post)
+ void show()
+ {static} void main(String[])
}

together {

    class Post {
    - String username
    - long timestamp
    - int likes
    - ArrayList<String> comments
    + void like()
    + void unlike()
    + void addComment(String)
    + long getTimeStamp()
    + void display()
    - String timeString(long)
    }

    class MessagePost {
    - String message
    + String getText()
    }

    class PhotoPost {
    - String filename
    - String caption
    + String getImageFile()
    + String getCaption()
    }

}


Post <|-d- MessagePost
Post <|-d- PhotoPost
@enduml